<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent"
    tools:context="com.productions.crackdown.braintraininggame.LevelChoose.LevelChooseFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/levels_layout_btns"
        android:gravity="center"
        android:text="@string/game_choose_a_level"
        style="@style/TitleText"
        android:textColor="@color/secondary_text"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/levels_layout_btns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/levels_btn_novice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/levels_novice"
            style="@style/BlueButton" />

        <Button
            android:id="@+id/levels_btn_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/levels_easy"
            style="@style/BlueButton" />

        <Button
            android:id="@+id/levels_btn_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/levels_medium"
            style="@style/BlueButton" />

        <Button
            android:id="@+id/levels_btn_guru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/levels_guru"
            style="@style/BlueButton" />






    </LinearLayout>
</RelativeLayout>
